--- a/index.html
+++ b/index.html
@@ -4188,6 +4188,14 @@
 </tr>
 
 <tr>
+<td>Comics Scene</td>
+<td>1982</td>
+<td>Starlog Group</td>
+<td><a href="ComicsScene/ComicsScene.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Comix Book</td>
 <td>1974</td>
 <td>Curtis</td>
@@ -13195,14 +13203,12 @@
 <td><a href="ProfessorXavier/ProfessorXavier.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Promethea</td>
 <td>1999</td>
 <td>America's Best</td>
 <td><a href="Promethea/Promethea.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>Propellerman</td>
@@ -13211,7 +13217,6 @@
 <td><a href="Propellerman/Propellerman.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Prowler</td>
 <td>1987</td>
@@ -13219,6 +13224,12 @@
 <td><a href="Prowler/Prowler.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Proxima Centauri</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="ProximaCentauri/ProximaCentauri.html">Details</a></td>
+</tr>
 
 <tr>
 <td>PSI-Force</td>
