--- a/slideshow.html
+++ b/slideshow.html
@@ -1961,80 +1961,80 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndyKubert01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndyKubert02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndyKubert03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndyKubert04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AndyKubert05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warhol01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warhol02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warhol03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warhol04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warhol05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AATA14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Angeltown01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Angeltown02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Angeltown03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Angeltown04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Angeltown05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AngusMcKie07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnimalComics1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnimalComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud/AndHerNameWasMaud9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground/AndrewVachssUnderground01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground/AndrewVachssUnderground02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground/AndrewVachssUnderground03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground/AndrewVachssUnderground04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyKubert/AndyKubert01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyKubert/AndyKubert02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyKubert/AndyKubert03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyKubert/AndyKubert04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyKubert/AndyKubert05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyWarhol/Warhol01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyWarhol/Warhol02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyWarhol/Warhol03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyWarhol/Warhol04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndyWarhol/Warhol05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin/AngelaAsgardAssassin13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelAndTheApe/AATA14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel/AngelaQueenOfHel01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHelAngelaQueenOfHel10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Angeltown/Angeltown01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Angeltown/Angeltown02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Angeltown/Angeltown03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Angeltown/Angeltown04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Angeltown/Angeltown05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngusMcKie/AngusMcKie07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics/AnimalComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalComics/AnimalComics2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AnimalComics5.jpg"></div>
