--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
 <td>Alias:</td>
 <td>1990</td>
 <td>Now</td>
-<td><a href="AliasNow/A-BabiesliasNow.html">Details</a></td>
+<td><a href="AliasNow/AliasNow.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12466,6 +12466,13 @@
 <td>1940</td>
 <td>Publisher</td>
 <td><a href="NoveltyPress/NoveltyPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Now Comics</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
