--- a/Stumptown/Stumptown.html
+++ b/Stumptown/Stumptown.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Stumptown1.jpg"> <br>
-4 issues from 2009 - 2010, 4 issues 2011 - 2012, 5 issues 2012- 2013, 4 issues 2017 - 2019 by Oni Press. 1 season in 2019 by ABC.
+4 issues from 2009 - 2010, 4 issues 2011 - 2012, 5 issues 2012- 2013, 4 issues 2017 - 2019 by <a href="../OniPRess/OniPress.html">Oni Press</a>. 1 season in 2019 by <a href="../ABC/ABC.html">ABC</a>.
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
