--- a/index.html
+++ b/index.html
@@ -12567,6 +12567,13 @@
 </tr>
 
 <tr>
+<td>Oni Press</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Onslaught Reborn</td>
 <td>2007</td>
 <td>Marvel</td>
