--- a/ExperimenterPublishing/ExperimenterPublishing.html
+++ b/ExperimenterPublishing/ExperimenterPublishing.html
@@ -18,7 +18,15 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="../AmazingStories/AmazingStories01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Experimenter8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,17 +40,17 @@ Radio News became Popular Electronics and the January 1975 issue featured the Al
 </p><p>
 Titles
 </p><p>
-<li>Electrical Experimenter (1913)
-<li>Radio News (1919)
-<li>Science and Invention (1920)
-<li>Practical Electrics (1921)
-<li>Motor Camper &amp; Tourist (1924)
-<li>The Experimenter (1924)
-<li>Radio Listeners' Guide and Call Book (1926)
+<li><a href="Experimenter1.jpg">Electrical Experimenter</a> (1913)
+<li><a href="Experimenter2.jpg">Radio News</a> (1919)
+<li><a href="Experimenter3.jpg">Science and Invention</a> (1920)
+<li><a href="Experimenter4.jpg">Practical Electrics</a> (1921)
+<li><a href="Experimenter5.jpg">Motor Camper &amp; Tourist</a> (1924)
+<li><a href="Experimenter6.jpg">The Experimenter</a> (1924)
+<li><a href="Experimenter7.jpg">Radio Listeners' Guide and Call Book</a> (1926)
 <li><a href="../AmazingStories/AmazingStories.html">Amazing Stories</a> (1926)
 <li>Your Body Quarterly (1926)
 <li>How to Make It (1926)
-<li>Television (1927)
+<li><a href="Experimenter8.jpg">Television</a> (1927)
 </p>
 
 </body>
