--- a/index.html
+++ b/index.html
@@ -12854,6 +12854,13 @@
 </tr>
 
 <tr>
+<td>Pendulum Press</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="PendulumPress/PendulumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pendragon</td>
 <td>1990</td>
 <td>Marvel</td>
