--- a/index.html
+++ b/index.html
@@ -3425,6 +3425,13 @@
 </tr>
 
 <tr>
+<td>Caliber Comics</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>California Dreamin</td>
 <td>2017</td>
 <td>First Second</td>
