--- a/index.html
+++ b/index.html
@@ -10467,6 +10467,13 @@
 </tr>
 
 <tr>
+<td>Malibu Comics</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Man Comics</td>
 <td>1949</td>
 <td>Marvel</td>
