--- a/index.html
+++ b/index.html
@@ -12462,6 +12462,13 @@
 </tr>
 
 <tr>
+<td>Northstar Publishing</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="NorthstarPublishing/NorthstarPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Not Brand Echh</td>
 <td>1967</td>
 <td>Marvel</td>
