--- a/index.html
+++ b/index.html
@@ -3656,6 +3656,13 @@
 </tr>
 
 <tr>
+<td>Cartoon Network</td>
+<td>1992</td>
+<td>Publisher</td>
+<td><a href="CartoonNetwork/CartoonNetwork.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Cars</td>
 <td>2006</td>
 <td>Pixar</td>
