--- a/CartoonNetwork/CartoonNetwork.html
+++ b/CartoonNetwork/CartoonNetwork.html
@@ -18,7 +18,11 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="../AdventureTime/AdventureTimeLogo.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CartoonNetwork2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CartoonNetwork3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CartoonNetwork4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CartoonNetwork5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,11 +36,11 @@ As of September 2018, Cartoon Network is available to approximately 89.212 milli
 </p><p>
 Titles
 </p><p>
-<li>Adventure Time (2010)   
-<li>Amazing World of Gumball (2011) 
-<li>Apple &amp; Onion (2018)    
-<li>Bakugan: Battle Planet (2018)   
-<li>Ben 10 (2005)   
+<li><a href="../AdventureTime/AdventureTime.html">Adventure Time</a> (2010) 
+<li><a href="CartoonNetwork2.jpg">Amazing World of Gumball</a> (2011) 
+<li><a href="CartoonNetwork3.jpg">Apple &amp; Onion</a> (2018)    
+<li><a href="CartoonNetwork4.jpg">Bakugan: Battle Planet</a> (2018) 
+<li><a href="CartoonNetwork5.jpg">Ben 10</a> (2005) 
 <li>Ben 10: Alien Force (2008)  
 <li>Ben 10: Omniverse (2012)    
 <li>Ben 10: Ultimate Alien (2010)   
