--- a/CreatorsSyndicate/CreatorsSyndicate.html
+++ b/CreatorsSyndicate/CreatorsSyndicate.html
@@ -26,45 +26,45 @@
 </p><p>
 Creators Syndicate (a.k.a. Creators) is an American independent distributor of comic strips and syndicated columns to daily newspapers, websites and other digital outlets. When founded in 1987, Creators Syndicate became one of the few successful independent syndicates founded since the 1930s and was the first syndicate to allow cartoonists ownership rights to their work.Creators Syndicate is based in Hermosa Beach, California. 
 </p><p>
-Creators Syndicate originated on February 13, 1987, after the December 24, 1986-announced sale of the Irvine, California-based News America Syndicate to King Features Syndicate, a print syndication company owned by The Hearst Corporation. Ann Landers, then the world's most widely syndicated newspaper columnist, also announced that she was leaving NAS to join the newly formed Creators Syndicate. Within a month, Creators Syndicate acquired the syndication rights to the enormously popular comic strip B.C.,[7] and a few months after that acquired the syndication rights to the cartoon works of Herblock, an American editorial cartoonist and author known for his commentary on domestic and foreign policy. 
+Creators Syndicate originated on February 13, 1987, after the December 24, 1986-announced sale of the Irvine, California-based News America Syndicate to King Features Syndicate, a print syndication company owned by The Hearst Corporation. Ann Landers, then the world's most widely syndicated newspaper columnist, also announced that she was leaving NAS to join the newly formed Creators Syndicate. Within a month, Creators Syndicate acquired the syndication rights to the enormously popular comic strip B.C., and a few months after that acquired the syndication rights to the cartoon works of Herblock, an American editorial cartoonist and author known for his commentary on domestic and foreign policy. 
 </p><p>
 Titles
 </p><p>
-<li>    Agnes
-<li>    Andy Capp
-<li>    Archie
-<li>    Ask Shagg
-<li>    B.C.
-<li>    Ballard Street
-<li>    The Barn
-<li>    Daddy's Home
-<li>    Diamond Lil
-<li>    Dog Eat Doug
-<li>    Dogs of C-Kennel
-<li>    Doodles
-<li>    Flo & Friends
-<li>    For Heaven's Sake
-<li>    Free Range
-<li>    Heathcliff
-<li>    Herb and Jamaal
-<li>    Liberty Meadows
-<li>    Long Story Short
-<li>    MazeToons
-<li>    The Meaning of Lila
-<li>    Momma (1987)
-<li>    Nest Heads
-<li>    One Big Happy
-<li>    The Other Coast
-<li>    Rubes
-<li>    Rugrats (1998)
-<li>    Scary Gary
-<li>    Spectickles
-<li>    Speed Bump
-<li>    Strange Brew
-<li>    Wee Pals (1987)
-<li>    The Wizard of Id
-<li>    Working it Out
-<li>    Zack Hill
+<li>Agnes
+<li>Andy Capp
+<li>Archie
+<li>Ask Shagg
+<li>B.C.
+<li>Ballard Street
+<li>The Barn
+<li>Daddy's Home
+<li>Diamond Lil
+<li>Dog Eat Doug
+<li>Dogs of C-Kennel
+<li>Doodles
+<li>Flo &amp; Friends
+<li>For Heaven's Sake
+<li>Free Range
+<li>Heathcliff
+<li>Herb and Jamaal
+<li>Liberty Meadows
+<li>Long Story Short
+<li>MazeToons
+<li>The Meaning of Lila
+<li>Momma (1987)
+<li>Nest Heads
+<li>One Big Happy
+<li>The Other Coast
+<li>Rubes
+<li>Rugrats (1998)
+<li>Scary Gary
+<li>Spectickles
+<li>Speed Bump
+<li>Strange Brew
+<li>Wee Pals (1987)
+<li>The Wizard of Id
+<li>Working it Out
+<li>Zack Hill
 </p>
 
 </body>
