--- a/index.html
+++ b/index.html
@@ -4469,6 +4469,13 @@
 </tr>
 
 <tr>
+<td>Creators Syndicate</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="CreatorsSyndicate/CreatorsSyndicate.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Creatures of the Night</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -15126,6 +15133,13 @@
 <td>2007</td>
 <td>Marvel</td>
 <td><a href="SquadronSupremeHyperionVsNighthawk/SquadronSupremeHyperionVsNighthawk.html">Details</a></td>
+</tr>
+
+<tr>
+<td>St. John Publications</td>
+<td>1947</td>
+<td>Publisher</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
