--- a/index.html
+++ b/index.html
@@ -1764,6 +1764,13 @@
 </tr>
 
 <tr>
+<td>Antarctic Press</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Apache Kid</td>
 <td>1950</td>
 <td>Atlas</td>
