--- a/MirageStudios/MirageStudios.html
+++ b/MirageStudios/MirageStudios.html
@@ -30,31 +30,31 @@ On October 21, 2009 it was announced that Viacom had purchased all of Mirage's r
 </p><p>
 Titles
 </p><p>
-<li>Bade Biker &amp; Orson by Jim Lawson
-<li>Barabbas by Dan Vado and Gino Atanasio
-<li>Bioneers by A.C. Farley
-<li>Commandosaurs by Peter Laird
-<li>Dino Island by Jim Lawson
-<li>Fugitoid by Kevin Eastman and Peter Laird
-<li>Gizmo by Michael Dooney
-<li>Gobbledygook by various artists
-<li>Grunts by various artists
-<li>Gutwallow by Dan Berger
-<li>Hallowieners: Invasion of the Halloween Hot Dogs by Ryan Brown
+<li>Bade Biker &amp; Orson
+<li>Barabbas
+<li>Bioneers
+<li>Commandosaurs
+<li>Dino Island
+<li>Fugitoid
+<li>Gizmo 
+<li>Gobbledygook
+<li>Grunts
+<li>Gutwallow
+<li>Hallowieners: Invasion of the Halloween Hot Dogs
 <li>Hero Sandwich
-<li>Melting Pot by Kevin Eastman and Eric Talbot
+<li>Melting Pot
 <li>Mirage Mini-Comics
-<li>Paleo by Jim Lawson
-<li>Planet Racers by Peter Laird and Jim Lawson
-<li>Plastron Cafe by various artists
+<li>Paleo
+<li>Planet Racers
+<li>Plastron Cafe
 <li>Prime Slime Tails
-<li>The Puma Blues by Stephen Murphy and Michael Zulli
-<li>Rockola by Ryan Brown
-<li>Stupid Heroes by Peter Laird
-<li>Teenage Mutant Ninja Turtles and related titles by Kevin Eastman and Peter Laird
-<li>Usagi Yojimbo (volume 2) and related titles by Stan Sakai
-<li>Wild West C.O.W.-Boys of Moo Mesa by Ryan Brown
-<li>Xenotech by Michael Dooney
+<li>The Puma Blues
+<li>Rockola
+<li>Stupid Heroes
+<li><a href="../TMNT/TMNT.html">Teenage Mutant Ninja Turtles</a> (1984)
+<li>Usagi Yojimbo
+<li>Wild West C.O.W. Boys of Moo Mesa
+<li>Xenotech
 </p>
 
 </body>
