--- a/Smitty/Smitty.html
+++ b/Smitty/Smitty.html
@@ -8,15 +8,27 @@
 </head>
 
 <body>
-<img src="Smitty.jpg"> <img src="Smitty2.jpg"><br>
-Series: Newspaper strip 1922 - 1973<br>
-Publisher: Cupples &amp; Leon<br>
+<img src="Smitty.jpg"><br>
+Newspaper strip from 1922 - 1973 with collections by <a href="../CupplesLeon/CupplesLeon.html">Cupples &amp; Leon</a><br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Smitty.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Smitty2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Smitty3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 Smitty was a newspaper comic strip created in the early 1920s by Walter Berndt. Syndicated nationally by the Chicago Tribune New York News Syndicate, it ran from November 29, 1922 to 1973 and brought Berndt a Reuben Award in 1969.
 </p><p>
 The strip featured young office boy Smitty, his six-year-old brother Herby, his girlfriend Ginny and his dog Scraps. Other characters were Smitty's boss, Mr. Bailey, and the Indian guide, Little Moose. Berndt based the strip on his own experience as an office boy, recalling, "I learned the tricks, shenangians and schemes of an office boy and became expert at them." 
-</p><p>
-<img src="Smitty3.jpg">
 </p><p>
 Berndt saw his creation as featuring "flashbacks of things you did as a young fellow." As the strip progressed, the teenage Smitty aged to young adulthood (approximately 13 to 23) and eventually got married. From 1938 through 1960, Berndt also produced the comic strip Herby as a topper to Smitty.
 </p><p>
