--- a/CupplesLeon/CupplesLeon.html
+++ b/CupplesLeon/CupplesLeon.html
@@ -8,22 +8,52 @@
 </head>
 
 <body>
-<h1>Cupples &amp; Leon</h1>
-Cupples &amp; Leon was an American publishing company founded in 1902 by Victor I. Cupples (1864–1941) and Arthur T. Leon (1867–1943). They published juvenile fiction and children's books but are mainly remembered today as the major publisher of books collecting comic strips during the early decades of the 20th century. 
+<b>Cupples &amp; Leon</b>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="../KatzenjammerKids/KatzenjammerKids5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AlphonseAndGaston/AlphonseAndGaston1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AndHerNameWasMaud/AndHerNameWasMaud1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../HappyHooligan/HappyHooligan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HaroldTeen.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoreLilMose.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BringingUpFather/BringingUpFather1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MuttAndJeff.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ReglarFellers/ReglarFellers.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Smitty/Smitty.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TailSpinTommy.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TillieTheToiler/TillieTheToiler1.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Cupples &amp; Leon collected such strips as:<br>
-<li><a href="../KatzenjammerKids/KatzenjammerKids.html">The Katzenjammer Kids</a>
-<li><a href="../AlphonseAndGaston/AlphonseAndGaston.html">Alphonse and Gaston</a>
-<li><a href="../AndHerNameWasMaud/AndHerNameWasMaud.html">And Her Name Was Maud</a>
-<li><a href="../HappyHooligan/HappyHooligan.html">Happy Hooligan</a>
-<li>On and Off the Ark
-<li>Poor Lil Mose and The Tigers
-<li><a href="../BringingUpFather/BringingUpFather.html">Bringing Up Father</a>
-<li><a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a>
-<li>Mutt and Jeff
-<li><a href="../ReglarFellers/ReglarFellers.html">Reg'lar Fellers</a>
-<li><a href="../Smitty/Smitty.html">Smitty</a>
-<li><a href="../TillieTheToiler/TillieTheToiler.html">Tillie the Toiler</a>
+Cupples &amp; Leon was an American publishing company founded in 1902 by Victor I. Cupples (1864–1941) and Arthur T. Leon (1867–1943). They published juvenile fiction and children's books but are mainly remembered today as the major publisher of books collecting comic strips during the early decades of the 20th century. The Platt &amp; Munk publishing firm acquired Cupples &amp; Leon in 1956. 
+</p><p>
+Titles
+</p><p>
+<li><a href="../KatzenjammerKids/KatzenjammerKids.html">Katzenjammer Kids</a> (1897)
+<li><a href="../AlphonseAndGaston/AlphonseAndGaston.html">Alphonse and Gaston</a> (1901)
+<li><a href="../AndHerNameWasMaud/AndHerNameWasMaud.html">And Her Name Was Maud</a> (1904)
+<li><a href="../HappyHooligan/HappyHooligan.html">Happy Hooligan</a> (1903)
+<li><a href="HaroldTeen.jpg">Harold Teen</a> (1931)
+<li><a href="PoreLilMose.jpg">Pore Lil Mose</a> (1900)
+<li><a href="../BringingUpFather/BringingUpFather.html">Bringing Up Father</a> (1913)
+<li><a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a> (1924)
+<li><a href="MuttAndJeff.jpg">Mutt and Jeff</a> (1920)
+<li><a href="../ReglarFellers/ReglarFellers.html">Reg'lar Fellers</a> (1917)
+<li><a href="../Smitty/Smitty.html">Smitty</a> (1922)
+<li><a href="TailSpinTommy.jpg">Tailspin Tommy</a> (1928)
+<li><a href="../TillieTheToiler/TillieTheToiler.html">Tillie the Toiler</a> (1925)
 
 </p>
 </body>
