--- a/ReglarFellers/ReglarFellers.html
+++ b/ReglarFellers/ReglarFellers.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Reg'larFellers.jpg"> <br>
+<img src="ReglarFellers.jpg"> <br>
 From 1917 - 1949 by Cupples &amp; Leon<br>
 <p>
 <div class="row"><div class="column">
@@ -19,10 +19,10 @@ From 1917 - 1949 by Cupples &amp; Leon<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Reg'larFellers.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Reg'larFellers1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Reg'larFellers2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Reg'larFellers3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReglarFellers.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReglarFellers1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReglarFellers2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReglarFellers3.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
