--- a/index.html
+++ b/index.html
@@ -9487,6 +9487,13 @@
 </tr>
 
 <tr>
+<td>Kabuki</td>
+<td>1994</td>
+<td>London Night</td>
+<td><a href="Kabuki/Kabuki.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kamandi</td>
 <td>1972</td>
 <td>DC</td>
