--- a/index.html
+++ b/index.html
@@ -9788,6 +9788,13 @@
 </tr>
 
 <tr>
+<td>Kodansha</td>
+<td>1909</td>
+<td>Publisher</td>
+<td><a href="Kodansha/Kodansha.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kolchak The Night Stalker</td>
 <td>1974</td>
 <td>ABC</td>
