--- a/ValiantComics/ValiantComics.html
+++ b/ValiantComics/ValiantComics.html
@@ -25,38 +25,40 @@ Founded by Jim Shooter and Steven Massarsky in 1989.
 <div class="mySlides" style="text-align: center;"><img src="ValiantComics5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ValiantComics6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ValiantComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4001AD.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArcherArmstrong.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArmorHunters.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bloodshot.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BloodshotReborn.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Valiant Comics is an American publisher of comic books and related media. The company was founded in 1989 by former Marvel Comics editor-in-chief Jim Shooter and lawyer and businessman Steven Massarsky. In 1994, the company was sold to Acclaim Entertainment. After Acclaim declared bankruptcy in 2004, the company was restarted as part of Valiant Entertainment by entrepreneurs Dinesh Shamdasani and Jason Kothari in 2005.
+<a href="http://valiantentertainment.com/">Valiant Comics</a> is an American publisher of comic books and related media. The company was founded in 1989 by former Marvel Comics editor-in-chief Jim Shooter and lawyer and businessman Steven Massarsky. In 1994, the company was sold to Acclaim Entertainment. After Acclaim declared bankruptcy in 2004, the company was restarted as part of Valiant Entertainment by entrepreneurs Dinesh Shamdasani and Jason Kothari in 2005.
 </p><p>
 Valiant Entertainment launched its publishing division in 2012 as part of an initiative dubbed the "Summer of Valiant", winning Publisher of the Year and being nominated for Book of the Year at the Diamond Gem Awards. Valiant has set sales records, and was the most nominated publisher in comics at the 2014, 2015 and 2016 Harvey Awards, releasing the biggest-selling independent crossover event of the decade with "Book of Death" in 2015. Valiant was acquired by DMG Entertainment in 2018.
 </p><p>
 In 2015, Valiant announced that they had partnered with Sony Pictures to produce five films based on the Bloodshot and Harbinger comic books.
 </p><p>
-<li>X-O Manowar 52 issues from March 2017 - Present
-<li>X-O Manowar	51 issues from May 2012 - September 2016
-<li>X-O Manowar 13 issues 2011 - 2012
-<li>Ninja-K	28 issues from November 2017 - December 2018
-<li>Ninjak	27 issues from 	March 2015 - May 2017
-<li>Archer and Armstrong 26 issues August 2012 - October 2014
-<li>Harbinger 26 issues	June 2012 - July 2014
-<li>Unity 26 issues November 2013 - December 2015
-<li>Bloodshot Salvation 24 issues September 2017 - August 2018
-<li>Livewire 24 issues December 2018 - Present
-<li>Quantum and Woody! 24 issues December 2017 - November 2018
-<li>Shadowman 22 issues March 2018 - Present
-<li>Bloodshot Reborn 19 issues April 2015 - March 2017
-<li>Rai 18 issues May 2014 - August 2016
-<li>Shadowman 18 issues November 2012 - March 2014
-<li>Bloodshot Rising Spirit 16 issues November 2018 - Present
-<li>Imperium 16 issues	February 2015 - May 2016
-<li>Bloodshot 14 issues July 2012 - August 2013
-<li>Psi-Lords 14 issues June 2019 - Present
-<li>Wrath of the Eternal Warrior 14 issues November 2015 - December 2016
-<li>Quantum & Woody 13 issues July 2013 - March 2014
+<li><a href="4001AD.jpg">4001 A.D.</a> (2016)
+<li><a href="ArcherArmstrong.jpg">Archer and Armstrong</a> (2012)
+<li><a href="ArmorHunters.jpg">Armor Hunters</a> (2014)
+<li><a href="Bloodshot.jpg">Bloodshot</a> (2012)
+<li><a href="BloodshotReborn.jpg">Bloodshot Reborn</a> (2015)
+<li>Bloodshot Rising Spirit (2018)
+<li>Bloodshot Salvation (2017)
+<li>Harbinger (2012)
+<li>Imperium (2015)
+<li>Livewire (2018)
+<li>Ninjak (2015)
+<li>Psi-Lords (2019)
+<li>Quantum &amp; Woody (2013)
+<li>Rai (2014)
+<li>Shadowman (2012)
+<li>Unity (2013)
+<li>Wrath of the Eternal Warrior (2015)
+<li>X-O Manowar (2012)
 
 </p>
 </body>
