--- a/WizardMagazine/WizardMagazine.html
+++ b/WizardMagazine/WizardMagazine.html
@@ -35,13 +35,17 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Wizard or Wizard: The Magazine of Comics, Entertainment and Pop Culture (previously titled Wizard: The Guide to Comics and Wizard: The Comics Magazine) was a magazine about comic books, published monthly in the United States by Wizard Entertainment from July 1991 to January 2011. It included a price guide, as well as comic book, movie, anime, and collector news, interviews, and previews. 
+Wizard was a magazine about comic books, published monthly in the United States by Wizard Entertainment from July 1991 to January 2011. It included a price guide, as well as comic book, movie, anime, and collector news, interviews, and previews. 
 </p><p>
-Wizard launched in July 1991. With issue #7, the magazine switched to glossy paper and color printing. Wizard strongly supported new publishers Valiant Comics and Image Comics, heavily promoting their new releases. With its high-end production values and embodiment of the comic speculator boom,[3] Wizard was an instant hit, with a monthly circulation of more than 100,000 copies.
+Wizard Entertainment Inc., formerly known as GoEnergy and Wizard World, is a producer of multi-genre fan conventions across North America. The company started as the holding company for Strato Malmas' interests in the energy business.
+</p><p>
+Wizard launched in July 1991. With issue #7, the magazine switched to glossy paper and color printing. Wizard strongly supported new publishers Valiant Comics and Image Comics, heavily promoting their new releases. With its high-end production values and embodiment of the comic speculator boom, Wizard was an instant hit, with a monthly circulation of more than 100,000 copies.
 </p><p>
 Wizard was relaunched with issue #228 (August 2010), which featured Mark Millar as a guest editor. The magazine went back to its strictly comic book roots. The issue featured a Green Hornet film cover and round table discussion with creators in the comic book film industry.
 </p><p>
-Despite all these changes, however, the magazine was losing subscribers at an unsustainable rate; by December 2010, its circulation was just 17,000 copies. On January 24, 2011, Rich Johnston of the website Bleeding Cool confirmed that the magazine would cease print publication, that almost all of its magazine staff had been laid off, and all freelance engagements canceled. This was confirmed later that day by Wizard, who also revealed that its sister magazine, ToyFare, was also canceled. According to the publication's representatives, Wizard would be relaunched in February 2011 as an online magazine called Wizard World. The first issue of "Wizard World" was made available online and through major digital distribution channels on March 2, 2011.
+Despite all these changes, however, the magazine was losing subscribers at an unsustainable rate; by December 2010, its circulation was just 17,000 copies. On January 24, 2011, Rich Johnston of the website Bleeding Cool confirmed that the magazine would cease print publication, that almost all of its magazine staff had been laid off, and all freelance engagements canceled. 
+</p><p>
+This was confirmed later that day by Wizard, who also revealed that its sister magazine, ToyFare, was also canceled. According to the publication's representatives, Wizard would be relaunched in February 2011 as an online magazine called Wizard World. The first issue of "Wizard World" was made available online and through major digital distribution channels on March 2, 2011.
 </p>
 </body>
 </html>
