--- a/Image/image.html
+++ b/Image/image.html
@@ -10,66 +10,88 @@
 <body>
 <img src="image.jpg"><br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Image1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Image12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Image Comics is an American comic book publisher. It was founded in 1992 by several high-profile illustrators as a venue for creator-owned properties, in which comics creators could publish material of their own creation without giving up the copyrights to those properties, as is normally the case in the work for hire-dominated American comics industry, in which the legal author is a publisher, such as Marvel Comics or DC Comics, and the creator is an employee of that publisher. 
 </p><p>
 Image Comics was immediately successful, and remains one of the largest comic book publishers in North America. Its output was originally dominated by superhero and fantasy series from the studios of the founding Image partners, but now includes comics in many genres by numerous independent creators. Its best-known series include The Walking Dead, Spawn, Savage Dragon, Witchblade, The Darkness, Invincible, Saga, Chew, and Bone.
 </p><p>
 Titles
 </p><p>
-<li>10th Muse (2000–2001)
-<li>13 Chambers (2008; by mink and Denis Medri)
-<li>The 13th Artifact (2016; by Amit Chauhan)
-<li>1963 (1993)
-<li>21
-<li>24Seven (2006–2007; anthology, edited by Ivan Brandon)
-<li>3 Floyds: Alpha King (2015; by Brian Azzarello and Nick Floyd)
-<li>39 Minutes (2016; by William Harms)
-<li>4-Fisted Adventures of Tug and Buster (1998 one-shot)
-<li>40 Oz. Collected TPB (1998 one-shot)
-<li>50 Girls 50 (2001; miniseries 1–4)
-<li>'68 (2006, 2011 by Mark Kidwell, Nat Jones and Jay Fotos)
-<li>76 (2008–2009; miniseries 1–5)
-<li>86 Volta Dead Girl (2005 one-shot)
-<li>8house (2016; by Brandon Graham)
+<li><a href="Image11.jpg">'68</a> (2006)
+<li><a href="Image1.jpg">10th Muse</a> (2000–2001)
+<li><a href="Image2.jpg">13 Chambers</a> (2008; by mink and Denis Medri)
+<li><a href="Image3.jpg">13th Artifact</a> (2016; by Amit Chauhan)
+<li><a href="Image4.jpg">1963</a> (1993)
+<li><a href="Image5.jpg">21</a>
+<li><a href="Image6.jpg">24Seven</a> (2006)
+<li><a href="Image7.jpg">3 Floyds: Alpha King</a> (2015)
+<li><a href="Image8.jpg">4-Fisted Adventures of Tug and Buster</a> (1998)
+<li><a href="Image9.jpg">40 Oz.</a> (1998)
+<li><a href="Image10.jpg">50 Girls 50</a> (2001)
+<li><a href="Image12.jpg">76</a> (2008)
+<li>86 Volta Dead Girl (2005)
+<li>8house (2016)
 <li>A.D.: After Death (2017)
-<li>The Activity
-<li>Adrenalynn: Weapon of War (1999–2000)
+<li>Activity
+<li>Adrenalynn: Weapon of War (1999)
 <li>Adrift (2015)
 <li>Adventures in the Rifle Brigade (2000)
 <li>Afar (2017)
 <li>Age of Bronze (1998–2010)
 <li>Airboy (2016)
 <li>Alex + Ada (2013–2015)
-<li>Alien Pig Farm 3000 (2007; by writer Todd Farmer/Steve Niles/Thomas Jane and art by Donald Marquez)
+<li>Alien Pig Farm 3000 (2007)
 <li>Allegra (1996)
-<li>Alley Cat (1999–2000)
-<li>The Alliance (1995)
+<li>Alley Cat (1999)
+<li>Alliance (1995)
 <li>Alpha Girl (2012)
 <li>Alter Nation (2004)
 <li>Altered Image (1998)
-<li>The Amazing Joy Buzzards (2005)
-<li>The Amazing Joy Buzzards vol. 2 (2005–2006)
-<li>Amber Atoms[12] (2009)
+<li>Amazing Joy Buzzards (2005)
+<li>Amber Atoms (2009)
 <li>American Flagg (2013)
 <li>American Jesus[13] (2009)
 <li>American Legends (2014)
-<li>The Amory Wars (2007–2008)
-<li>The Amory Wars vol. 2 (2008)
+<li>Amory Wars (2007)
+<li>Amory Wars vol. 2 (2008)
 <li>Analog (2018)
-<li>Angela (1994–1995)
-<li>Ant vol. 2 (2005–2007; previous volume from Arcana Studio)
+<li>Angela (1994)
+<li>Ant (2005)
 <li>Aqua Leung (2008)
-<li>Arcanum (1997–1998)
+<li>Arcanum (1997)
 <li>Area 52 (2001)
 <li>Aria (1999)
 <li>Ascend (2004)
-<li>Assassin Nation (2019–)
-<li>The Astounding Wolf-Man (2007–2010)
-<li>Astro City (1995–1996; by Kurt Busiek)
-<li>Astro City vol. 2 (1996–2000)
-<li>The Atheist (2005–2007)
+<li>Assassin Nation (2019)
+<li>Astounding Wolf-Man (2007)
+<li>Astro City (1995)
+<li>Atheist (2005)
 <li>Athena Inc. (2001)
-<li>Awakening (1997–1998)
+<li>Awakening (1997)
 <li>Back to Brooklyn
 <li>Backlash
 <li>Bad Dog
@@ -80,15 +102,15 @@ Titles
 <li><a href="../Barrier/Barrier.html">Barrier</a>
 <li>Bastard Samurai (2002)
 <li>Battle Chasers
-<li>Battle Hymn (2004–2005)
+<li>Battle Hymn (2004)
 <li>Battle of the Planets
 <li>Battle of the Planets: Coup de Gras (2005)
-<li>Battle Pope vol. 2 (2005–2007)
+<li>Battle Pope vol. 2 (2005)
 <li>Battlestar Galactica
 <li>Battlestone
 <li>Beauty (2015)
 <li><a href="../Bedlam/Bedlam.html">Bedlam</a> (2012)
-<li>Beef (February 2018 – June 2018)
+<li>Beef (2018)
 <li>Berserker
 <li>Beyond Avalon (2005)
 <li>Big Bang Comics
@@ -126,24 +148,24 @@ Titles
 <li>Bomb Queen
 <li>Bonus
 <li>Bone
-<li>Bonerest (2005–2006)
+<li>Bonerest (2005)
 <li>Boof
 <li>Boof and the Bruise Crew
 <li>Book of Shadows
 <li>Brass
 <li>Brawl
 <li>Brigade
-<li>Brit (2007–2009)
+<li>Brit (2007)
 <li>Broken Trinity
 <li>Brother Bedlam
 <li><a href="../BulletproofCoffin/BulletproofCoffin.html">Bulletproof Coffin</a>
-<li>Bulletproof Monk (1998–1999)
+<li>Bulletproof Monk (1998)
 <li>Bunker
-<li>Burglar Bill vol. 2 (2004–2005)
+<li>Burglar Bill (2004)
 <li>Butcher Knight
 <li>C-23 (1998)
-<li>Carbon Grey (2011–present)
-<li>Casanova (2006–2008)
+<li>Carbon Grey (2011)
+<li>Casanova (2006)
 <li>Celestine
 <li>Channel Zero
 <li>Chapel
@@ -151,25 +173,25 @@ Titles
 <li><a href="../Chew/Chew.html">Chew</a>
 <li>Choker
 <li>Cholly and Flytrap
-<li>The Circle
-<li>City of Heroes vol. 2 (2005–2007)
+<li>Circle
+<li>City of Heroes (2005)
 <li>City of Silence
-<li>The Clock Maker
+<li>Clock Maker
 <li>Cloudburst (2004)
 <li>Codeflesh
 <li>Comic Book Tattoo
 <li>Compass Zero
-<li>Copperhead (2014–)
-<li>The Creech (1997)
+<li>Copperhead (2014)
+<li>Creech (1997)
 <li>Creed
 <li>Crimson
-<li>The Cross Bronx (2006)
-<li>Crosswind (2017–)
+<li>Cross Bronx (2006)
+<li>Crosswind (2017)
 <li>Crow (1999)
-<li>Crowded (2018–)
+<li>Crowded (2018)
 <li><a href="../Crush/Crush.html">Crush</a>
 <li>Crypt
-<li>Curse Words (2017–2019)
+<li>Curse Words (2017)
 <li>Cursed
 <li>Cyberforce
 <li>Cybernary
@@ -182,69 +204,69 @@ Titles
 <li>Dart
 <li>David and Goliath
 <li>Dawn
-<li>Days Of Hate (January 2018 – December 2018)
+<li>Days Of Hate (2018)
 <li>Dead Ahead
 <li>Dead Body Road
 <li>Dead Space
 <li><a href="../DeadlyClass/DeadlyClass.html">Deadly Class</a> (2013)
-<li>Deadworld vol. 3 (2005–2006; previous volumes from Caliber Press)
+<li>Deadworld (2005)
 <li>Death Dealer
 <li>Death Jr.
 <li>Death or Glory, by Rick Remender and Bengal (2018)
 <li>Deathblow
-<li>Demon Slayer (1998–2000)
-<li>Deep Sleeper (2004; first two issues published by Oni Press)
+<li>Demon Slayer (1998)
+<li>Deep Sleeper (2004)
 <li>Defcon 4
 <li>Defiance
 <li>Deity: Revelations
-<li>Descender (2015–)
+<li>Descender (2015)
 <li>Desperate Times
-<li>The Detonator (2004–2005; by Mike Baron)
+<li>Detonator (2004)
 <li>A Distant Soil
 <li>Divine Right
 <li>Doom's IV
 <li>Drain
-<li>Drifter (2014 – ongoing)
-<li>The Drowned[23]
+<li>Drifter (2014)
+<li>Drowned
 <li>Drums
-<li>Dust[24][25][26][27]
+<li>Dust
 <li>Dusty Star
 <li>DV8
-<li>Dynamo 5 (2007–2009)
-<li>East of West (2013 – ongoing)
-<li>Eclipse (2017–)
-<li>Elephantmen (2006–2018)
-<li>Elsewhere (2017–)
-<li>Empty Zone (2015-)
-<li>Enormous (former publisher; 2012–2015 and Kaiju is Giant Animal/Creatures in Series)
-<li>Eternal Empire (2017–)
-<li>The Expatriate (2005–2006)
+<li>Dynamo 5 (2007)
+<li>East of West (2013)
+<li>Eclipse (2017)
+<li>Elephantmen (2006)
+<li>Elsewhere (2017)
+<li>Empty Zone (2015)
+<li>Enormous (2012)
+<li>Eternal Empire (2017)
+<li>Expatriate (2005)
 <li>Extreme Sacrifice (1995)
-<li>Extremity (2017–)
+<li>Extremity (2017)
 <li>Faction Paradox
-<li>The Fade Out (2014–2016)
-<li>Fairlady (2019–)
-<li>Fall Out Toy Works (2009–2010)[28]
-<li>Farmhand, by Taylor Wells and Rob Guillory (2018–)
+<li>Fade Out (2014)
+<li>Fairlady (2019)
+<li>Fall Out Toy Works (2009)
+<li>Farmhand (2018)
 <li>Fatale
-<li>Fear Agent (2005–2010)
+<li>Fear Agent (2005)
 <li>Fearless
 <li>Feather
-<li>Fell (2005–2008)
+<li>Fell (2005)
 <li>Ferro City (2005)
 <li>Fire From Heaven
 <li>Firebreather
 <li>First Man
-<li>Five Ghosts (2013–)
-<li>The Fix (2016–)
-<li>Flaming Carrot Comics (2004–2005)
-<li>Flavor (2018–)
+<li>Five Ghosts (2013)
+<li>The Fix (2016)
+<li>Flaming Carrot Comics (2004)
+<li>Flavor (2018)
 <li>Forever Amber
-<li>Four Eyes[29] (2008-Ongoing)
+<li>Four Eyes (2008)
 <li>Four Letter Worlds
 <li>Frankenstein Mobster
 <li>Freedom Force
-<li>Freshmen (2005–2006)
+<li>Freshmen (2005)
 <li>From Under Mountains
 <li>G.I. Joe
 <li>G-Man
@@ -252,33 +274,33 @@ Titles
 <li>Geeksville
 <li>Gen¹³
 <li>Gen¹³/Monkeyman and O'Brien
-<li>Get Naked (Great was Utopian Nudist Comic)
+<li>Get Naked 
 <li>Ghost Spy
 <li>Ghosted
-<li>The Gift (2004–2006; previously published by Raven Publications)
-<li>Girls (2005–2007)
+<li>Gift (2004)
+<li>Girls (2005)
 <li>Gladstone's School for World Conquerors
-<li>Glitter Bomb (2016–2017)
-<li>Glitter Bomb: The Fame Game (2017–2018)
+<li>Glitter Bomb (2016)
+<li>Glitter Bomb: The Fame Game (2017)
 <li>Go Girl!
-<li>God Complex (2009–2010)
+<li>God Complex (2009)
 <li>God Country (2017)
-<li>God Hates Astronauts (2014 – ongoing)
-<li>Gødland (2005 – ongoing)
-<li>The Gray Area
+<li>God Hates Astronauts (2014)
+<li>Gødland (2005)
+<li>Gray Area
 <li>Grease Monkey
 <li>Great Pacific
-<li>Green Valley (2016–2017)
+<li>Green Valley (2016)
 <li>Groo the Wanderer
-<li>Grounded (2005–2006)
+<li>Grounded (2005)
 <li>Grrl Scouts: Work Sucks
-<li>Guerillas[30]
-<li>GunCandy (2005–2006)
+<li>Guerillas
+<li>GunCandy (2005)
 <li>Hack/Slash
 <li>Halcyon
 <li>Haunt
 <li>Hawaiian Dick
-<li>Hawaiian Dick: The Last Resort (2004–2005)
+<li>Hawaiian Dick: The Last Resort (2004)
 <li>Hazed
 <li>Heirs of Eternity
 <li>Hellcop
@@ -287,36 +309,36 @@ Titles
 <li>Hero Camp (2005)
 <li>Hip Flask
 <li>Hong on the Range
-<li>Horizon (2016–)
-<li>The Horror Book
+<li>Horizon (2016)
+<li>Horror Book
 <li>Humankind
-<li>The Humans (2015) – a spiritual successor to the Planet of the Apes comic series
-<li>Hunter-Killer (2005–2007)
-<li>I Kill Giants[31]
-<li>The Imaginaries (2005)
+<li>Humans (2015)
+<li>Hunter-Killer (2005)
+<li>I Kill Giants
+<li>Imaginaries (2005)
 <li>Immortal II
 <li>Infidel
 <li>Infinite Dark
-<li>Intimidators (comics)
+<li>Intimidators 
 <li>Intrigue
-<li>Invincible (2003 – 2018)
-<li>Invisible Republic (2015 – ongoing)
-<li>The Iron Ghost (2005–2006)
+<li>Invincible (2003)
+<li>Invisible Republic (2015)
+<li>Iron Ghost (2005)
 <li>Iron Wings
-<li>Isis (2002; one-shot)
-<li>Jack Kirby's Silver Star[32]
-<li>Jack Staff (2003–2009)
+<li>Isis (2002)
+<li>Jack Kirby's Silver Star
+<li>Jack Staff (2003)
 <li>Jade Warriors
-<li>Jersey Gods[33]
+<li>Jersey Gods
 <li>Jinx
 <li>Journeyman
 <li>J.U.D.G.E.
-<li>Jupiter's Legacy (Volume 1, 2015; Volume 2, 2017)
+<li>Jupiter's Legacy (2015)
 <li>Kabuki
 <li>Kid Supreme
-<li>Kill All Parents[34][35]
-<li>Kill the Minotaur (2017–)
-<li>Kill or Be Killed (2016–)
+<li>Kill All Parents
+<li>Kill the Minotaur (2017)
+<li>Kill or Be Killed (2016)
 <li>Kin
 <li>Kingdom City
 <li>Kiss: Psycho Circus
@@ -324,18 +346,18 @@ Titles
 <li>Kore
 <li>Lady Pendragon
 <li>Lady Rawhide
-<li>The Last Christmas
+<li>Last Christmas
 <li>Last Shot
-<li>Lazarus (2013-Ongoing)[36]
+<li>Lazarus (2013)
 <li>Leave It to Chance
 <li>Legacy
 <li>Legend of Supreme
-<li>Liberty Meadows (2002–2006)
-<li>The Light (2010)
-<li>The Li'l Depressed Boy[37]
-<li>Limbo[38] (2015–2016)
+<li>Liberty Meadows (2002)
+<li>Light (2010)
+<li>Li'l Depressed Boy
+<li>Limbo (2015)
 <li>Lions, Tigers and Bears
-<li>Liquid City[39]
+<li>Liquid City
 <li>Little Bird (2019)
 <li>Little Red Hot
 <li>Loaded Bible
@@ -343,112 +365,112 @@ Titles
 <li>Lucha Libre
 <li>Lullaby: Wisdom Seeker
 <li>M. Rex
-<li>Madman Atomic Comics (beginning April 2007)
-<li>Maestros (2017–)
+<li>Madman Atomic Comics (2007)
+<li>Maestros (2017)
 <li>Mage
 <li>Man-Eaters by Chelsea Cain and Kate Niemczyk
-<li>The Manhattan Projects
-<li>Manifest Destiny (2013–)
+<li>Manhattan Projects
+<li>Manifest Destiny (2013)
 <li>Mask of Zorro
 <li>Masters of the Universe
 <li>Maximage
-<li>The Maxx
+<li>Maxx
 <li>Mayhem!
 <li>Mech Destroyer
 <li>Megaton Man
 <li>Meltdown
-<li>The Mice Templar
+<li>Mice Templar
 <li>Micronauts
-<li>Middlewest (2018–)
+<li>Middlewest (2018)
 <li>Misplaced
-<li>Monstress by Marjorie Liu and Sana Takeda (2015–)
-<li>Moonstruck by Grace Ellis and Shae Beagle (2017–)
+<li>Monstress by Marjorie Liu and Sana Takeda (2015)
+<li>Moonstruck by Grace Ellis and Shae Beagle (2017)
 <li>Mora (2005)
 <li>More Than Mortal: Otherworlds
 <li>Morning Glories
-<li>Motor Crush (2016–)
-<li>Murder Falcon (2018-)
+<li>Motor Crush (2016)
+<li>Murder Falcon (2018)
 <li>Mutant Earth
 <li>Mythstalkers
 <li>Nailbiter
 <li>Nash (1999)
 <li>Near Death (2011)
-<li>The New Brighton Archeological Society (2009)
+<li>New Brighton Archeological Society (2009)
 <li>New Men
-<li>The Next Issue Project
+<li>Next Issue Project
 <li>Night Club
-<li>Night World (2014; 10-issue miniseries)
+<li>Night World (2014)
 <li>No Place Like Home
 <li>Noble Causes (2002)
-<li>Noble Causes (vol. 2 2004–2009)
+<li>Noble Causes (2004)
 <li>Nonplayer
 <li>Nowhere Men
 <li>NYC Mech
 <li>NYC Mech: Beta Love (2005)
 <li>Obergeist
 <li>Occult Crimes Taskforce
-<li>Oliver (2019–)
-<li>Olympus[40]
-<li>Orc Stain[41][42]
-<li>The Others
+<li>Oliver (2019)
+<li>Olympus
+<li>Orc Stain
+<li>Others
 <li>Outcast
 <li>Outlaw Territory
-<li>Paper Girls (2015–)
-<li>Paradigm (September 2002 – November 2003)
-<li>Pax Romana (December 2007 – November 2008)
-<li>Peter Panzerfaust (February 2013 – December 2016)
+<li>Paper Girls (2015)
+<li>Paradigm (2002)
+<li>Pax Romana (2007)
+<li>Peter Panzerfaust (2013)
 <li>Phantom Guard
 <li>Phantom Jack
-<li>Phonogram (August 2006 – January 2016)
+<li>Phonogram (2006)
 <li>PigTale
-<li>The Pirates of Coney Island
+<li>Pirates of Coney Island
 <li>PITT
 <li>Planetoid
 <li>Point of Impact
-<li>Popgun (October 2012 – January 2013)
-<li>The Portent
+<li>Popgun (2012)
+<li>Portent
 <li>Power Rangers: Zeo
-<li>Powers (April 2000 – ongoing)
-<li>Pretty Deadly (2013 – ongoing)
-<li>Prism Stalker (2018–)
-<li>The Private Eye (March 2013 – ongoing)
+<li>Powers (2000)
+<li>Pretty Deadly (2013)
+<li>Prism Stalker (2018)
+<li>Private Eye (2013)
 <li>Prodigy
-<li>Proof[43] (October 2007 – 2010)
+<li>Proof (2007)
 <li>Prophet
-<li>PvP vol. 2 (2003–2010)
+<li>PvP (2003)
 <li>Random Acts of Violence (2010)
-<li>Rasputin (2014–2016)
+<li>Rasputin (2014)
 <li>Rat Queens (2013)
-<li>The Realm (2017–)
-<li>Redlands (2017–)
-<li>Redneck (2017–)
+<li>Realm (2017)
+<li>Redlands (2017)
+<li>Redneck (2017)
 <li>Reed Gunther (2011)
 <li>Regulators (1995)
 <li>Renato Jones (2017)
 <li>Repo (2007)
 <li>Revenge (2014)
-<li>Revival (2013 – 2017)
-<li>Rex Mundi (2002–2006)
+<li>Revival (2013)
+<li>Rex Mundi (2002)
 <li>Riptide
 <li>Rising Stars: Voices of the Dead (2005)
-<li>Rocketo: Journey to the Hidden Sea (2005–2006)
-<li>Rose (2017–)
+<li>Rocketo: Journey to the Hidden Sea (2005)
+<li>Rose (2017)
 <li>Rotogin: Junkbotz
-<li>Rumble (2014 – ongoing)
+<li>Rumble (2014)
 <li>Runes of Ragnan
-<li>The Safest Place[44]
+<li>Safest Place
 <li>Saga
 <li>Satellite Sam
 <li>Savage Dragon
 <li>Savant Garde
 <li>Screamland
 <li>Scud: The Disposable Assassin
-<li>Sea of Red (2005–2006)
-<li>Sea of Stars (2019–)
-<li>Season of the Witch (2005–2006)
-<li>The Second Stage Turbine Blade
-<li>Seven to Eternity (2016-ongoing)
-<li>Sex Criminals (2013–)
+<li>Sea of Red (2005)
+<li>Sea of Stars (2019)
+<li>Season of the Witch (2005)
+<li>Second Stage Turbine Blade
+<li>Seven to Eternity (2016)
+<li>Sex Criminals (2013)
 <li>Shadowhawk
 <li>Shadows
 <li>Shaman's Tears
@@ -457,29 +479,29 @@ Titles
 <li>Sidekick
 <li>Siren
 <li>Skullkickers
-<li>Skyward (2018–)
+<li>Skyward (2018)
 <li>Sleepless
-<li>Slots (2017–)
-<li>Small Gods (2004–2005)
-<li>Snotgirl (2016–)
+<li>Slots (2017)
+<li>Small Gods (2004)
+<li>Snotgirl (2016)
 <li>SOCOM: SEAL Team Seven
-<li>Sonata (2019–)
+<li>Sonata (2019)
 <li>Sons of the devil
 <li>Sorrow
-<li>Soul Kiss[45]
-<li>Southern Bastards (2014–)
-<li>Southern Cross (2015–)
+<li>Soul Kiss
+<li>Southern Bastards (2014)
+<li>Southern Cross (2015)
 <li>Spawn
-<li>Spread (2014–)
+<li>Spread (2014)
 <li>Stardust Kid (2005)
-<li>Stellar[46] (2018–)
+<li>Stellar (2018)
 <li>Stone
 <li>Stormwatch
-<li>The Strange Adventures of H.P. Lovecraft (2009)
-<li>Strange Girl (2005–2007)
-<li>The Strange Talent of Luther Strode (2011–2012)
+<li>Strange Adventures of H.P. Lovecraft (2009)
+<li>Strange Girl (2005)
+<li>Strange Talent of Luther Strode (2011)
 <li>Strangers
-<li>Stray Bullets (1995–)
+<li>Stray Bullets (1995)
 <li>Stupid Comics
 <li>Suburban Glamour
 <li>Sullivan's Sluggers
@@ -487,15 +509,15 @@ Titles
 <li>SuperPatriot
 <li>Supreme
 <li>Sweets
-<li>The Sword
+<li>Sword
 <li>Sword of Dracula
-<li>Sylvia Faust (2004–2005)
+<li>Sylvia Faust (2004)
 <li>Team 7
 <li>Teen Wolf
 <li>Teenage Mutant Ninja Turtles
 <li>Tellos
 <li>Tellos: Second Coming (2005)
-<li>The Tenth
+<li>Tenth
 <li>Tenth Muse
 <li>Texas Strangers
 <li>Thief of Thieves (2012)
@@ -507,40 +529,39 @@ Titles
 <li>Trencher
 <li>Tribe
 <li>Tripper
-<li>Troubleman (1996; miniseries 1–3)
+<li>Troubleman (1996)
 <li>True Story Swear to God
 <li>Turf
 <li>Ultra
 <li>Umbra
 <li>Underground
-<li>Undying Love (2011)[47]
+<li>Undying Love (2011)
 <li>Union
-<li>Unnatural by Mirka Andolfo (2018–2019)
-<li>Vanguard (1993–1994)
+<li>Unnatural by Mirka Andolfo (2018)
+<li>Vanguard (1993)
 <li>Velocity
-<li>Velvet (2013–2016)
-<li>V.I.C.E. (2005–2006)
-<li>Victory (2003–2004)
-<li>Victory vol. 2 (2004–2005)
-<li>Viking (2009–2010)
+<li>Velvet (2013)
+<li>V.I.C.E. (2005)
+<li>Victory (2003)
+<li>Viking (2009)
 <li>Violent Messiahs
-<li>A Voice in the Dark
+<li>Voice in the Dark
 <li>Voltron
 <li>Wahoo Morris
-<li>The Walking Dead (2003 – 2019)
+<li>Walking Dead (2003)
 <li>Wanted
-<li>War Heroes[48]
+<li>War Heroes
 <li>Ward of the State
 <li>Warlands
-<li>Warning (2018–)
-<li>Waterloo Sunset (2004–2005)
+<li>Warning (2018)
+<li>Waterloo Sunset (2004)
 <li>Wayward
 <li>We Stand On Guard
 <li>Weapon Zero
 <li>Wetworks
 <li>Whispers
-<li>The Wicked + The Divine (2014–)
-<li>The Wicked West
+<li>Wicked + The Divine (2014)
+<li>Wicked West
 <li>Wildcats
 <li>Wildguard
 <li>WildStar
