--- a/index.html
+++ b/index.html
@@ -13329,6 +13329,14 @@
 <td><a href="Psycho/Psycho.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Psycho</td>
+<td>1991</td>
+<td>DC</td>
+<td><a href="PsychoDC/PsychoDC.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Psychonauts</td>
 <td>1993</td>
