--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 <tbody>
 
 <tr>
+<td>01Comics</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="01Comics/01Comics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>1st Folio</td>
 <td>1981</td>
 <td>PC</td>
@@ -199,6 +206,13 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="1001NightsOfBacchus/1001nightsofbacchus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>11 88 Studios</td>
+<td>2009</td>
+<td>Publisher</td>
+<td><a href="1188Studios/1188Studios.html">Details</a></td>
 </tr>
 
 <tr>
