--- a/NorthstarPublishing/NorthstarPublishing.html
+++ b/NorthstarPublishing/NorthstarPublishing.html
@@ -30,7 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Northstar10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Northstar11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Northstar12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Northstar13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Faust/Faust1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Northstar14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Northstar15.jpg"></div>
 
@@ -54,7 +54,7 @@ Titles
 <li><a href="Northstar10.jpg">Cold Blooded</a> (1993)
 <li><a href="Northstar11.jpg">Cold Blooded: The Burning Kiss</a> (1993)
 <li><a href="Northstar12.jpg">Cold Blooded: The Slayer</a> (1995)
-<li><a href="Northstar13.jpg">Faust</a> (1989)
+<li><a href="../Faust/Faust1.jpg">Faust</a> (1989)
 <li><a href="Northstar14.jpg">Fritz Whistle</a> (1992)
 <li><a href="Northstar15.jpg">Horror: The Illustrated Book of Fears</a> (1989)
 <li>The Hunting (1993)
