--- a/index.html
+++ b/index.html
@@ -6627,6 +6627,13 @@
 </tr>
 
 <tr>
+<td>Faust</td>
+<td>1987</td>
+<td>Northstar</td>
+<td><a href="Faust/Faust.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fawcett Comics</td>
 <td>2012</td>
 <td>Publisher</td>
