--- a/index.html
+++ b/index.html
@@ -9373,6 +9373,12 @@
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Jonah Hex</td>
+<td>1977</td>
+<td>DC</td>
+<td><a href="JonahHex/JonahHex.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Joseph Doolin</td>
