--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 </tr>
 
 <tr>
+<td>11 88 Studios</td>
+<td>2009</td>
+<td>Publisher</td>
+<td><a href="1188Studios/1188Studios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>12 Gauge</td>
+<td>2009</td>
+<td>Publisher</td>
+<td><a href="12GaugeComics/12GaugeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>13th Son</td>
 <td>2007</td>
 <td>Dark Horse</td>
@@ -206,13 +220,6 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="1001NightsOfBacchus/1001nightsofbacchus.html">Details</a></td>
-</tr>
-
-<tr>
-<td>11 88 Studios</td>
-<td>2009</td>
-<td>Publisher</td>
-<td><a href="1188Studios/1188Studios.html">Details</a></td>
 </tr>
 
 <tr>
