--- a/RipOffPress/RipOffPress.html
+++ b/RipOffPress/RipOffPress.html
@@ -18,13 +18,22 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RipOffPress10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Rip Off Press, Inc. is a mail order retailer and distributor, better known as the former publisher of "adult-themed" series like The Fabulous Furry Freak Brothers and Rip Off Comix, as well as many other seminal publications from the underground comix era. Founded in 1969 in San Francisco by four friends from Austin, Texas — cartoonists Gilbert Shelton and Jack Jackson, and Fred Todd and Dave Moriaty — Rip Off Press is now run out of Auburn, California, by Todd and his wife.
+<a href="https://www.ripoffpress.com/">Rip Off Press</a> is a mail order retailer and distributor, better known as the former publisher of "adult-themed" series like The Fabulous Furry Freak Brothers and Rip Off Comix, as well as many other seminal publications from the underground comix era. Founded in 1969 in San Francisco by four friends from Austin, Texas — cartoonists Gilbert Shelton and Jack Jackson, and Fred Todd and Dave Moriaty — Rip Off Press is now run out of Auburn, California, by Todd and his wife.
 </p><p>
 Rip Off Press is also notable for being the original company to publish the fourth edition of the Principia Discordia, a Discordian religious text written by Gregory Hill and Kerry Thornley. It was also an early publisher of the infamous booklet on drug manufacturing, Psychedelic Chemistry. 
 </p><p>
