--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
 </tr>
 
 <tr>
+<td>215 Ink</td>
+<td>2007</td>
+<td>Publisher</td>
+<td><a href="215Ink/215Ink.html">Details</a></td>
+</tr>
+
+<tr>
 <td>300</td>
 <td>1998</td>
 <td>Dark Horse</td>
@@ -15294,6 +15301,13 @@
 <td>2016</td>
 <td>Marvel</td>
 <td><a href="StarbrandAndNightmask/StarbrandAndNightmask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Starblazer</td>
+<td>1979</td>
+<td>DC Thomson</td>
+<td><a href="Starblazer/Starblazer.html">Details</a></td>
 </tr>
 
 <tr>
