--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
 </tr>
 
 <tr>
+<td>3 Boys Productions</td>
+<td>2004</td>
+<td>Publisher</td>
+<td><a href="3BoysProductions/3BoysProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>3 Finger Prints</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="3FingerPrints/3FingerPrints.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3 Story Secret History </td>
 <td>2009</td>
 <td>Dark Horse</td>
@@ -75,6 +89,20 @@
 <td>1954</td>
 <td>Marvel </td>
 <td><a href="3DTalesOfTheWest/3DTalesOfTheWest.html">Details</a></td>
+</tr>
+
+<tr>
+<td>3CG Comics</td>
+<td>1996</td>
+<td>Publisher</td>
+<td><a href="3CGComics/3CGComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>3D Cosmic</td>
+<td>1972</td>
+<td>Publisher</td>
+<td><a href="3DCosmic/3DCosmic.html">Details</a></td>
 </tr>
 
 <tr>
@@ -146,6 +174,13 @@
 </tr>
 
 <tr>
+<td>40 Oz Comics</td>
+<td>1998</td>
+<td>Publisher</td>
+<td><a href="40OzComics/40OzComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>47 Ronin</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -207,6 +242,14 @@
 <td>Marvel</td>
 <td><a href="411/411.html">Details</a></td>
 </tr>
+
+<tr>
+<td>451 Media</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="451Media/451Media.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>1000 Jokes</td>
@@ -2996,6 +3039,13 @@
 <td>1941</td>
 <td>Street &amp; Smith</td>
 <td><a href="BlackstoneMagician/BlackstoneMagician.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blackthorne</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="Blackthorne/Blackthorne.html">Details</a></td>
 </tr>
 
 <tr>
